enh: server exposes latest error report
